# ph_agent

./: .pre-commit-config.yaml  CLAUDE.md  FEATURES.md  FILE_EXTENSION_FIX_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  POSSIBLE FEATURES.md  PROMPT_TEMPLATES.md  README.md  TEST.md  TODO-FEATURES.md  TOKENS-OPTIMIZATION.md  WEBSEARCH.md  pyproject.toml
.github/: copilot-instructions.md
ph_agent/: hooks.py  modules.txt  patches.txt
ph_agent/agent/: deepseek_agent.py  framework_agent.py  state_compaction.py
ph_agent/agent/context/: llm_memory_provider.py  user_preference_provider.py
ph_agent/agent/skills/: __init__.py  script_runner.py  skill_manager.py
ph_agent/agent/tools/: __init__.py  calculator_tool.py  create_skill_tool.py  create_tool_tool.py  datetime_tool.py  embedding_router.py  exchange_rate_tool.py  frappe_crud_tool.py  frappe_query_tool.py  hacker_news_tool.py  reddit_tool.py  schema_discovery_tool.py  sec_edgar_tool.py  stack_exchange_tool.py  tool_manager.py  tool_router_provider.py  web_search_tool.py  wikipedia_tool.py  yahoo_finance_tool.py
ph_agent/api/: agent_jobs.py  chat.py  permission.py  session.py  token_counter.py  token_utils.py  usage.py
ph_agent/desktop_icon/: ph_agent.json
ph_agent/patches/: sample_skills.py
ph_agent/patches/v16_0/: migrate_to_personas.py  seed_tool_registry.py
ph_agent/patches/v1_0_0/: migrate_to_personas.py  seed_tool_registry.py
ph_agent/patches/v1_4_0/: fix_system_prompt_inheritance.py  update_tool_groups.py
ph_agent/patches/v1_6_0/: create_ph_agent_user_role.py
ph_agent/patches/v1_6_1/: add_llm_provider_read_for_ph_agent_user.py  update_user_token_usage_permissions.py
ph_agent/ph_agent/: tasks.py
ph_agent/ph_agent/doctype/chat_message/: chat_message.js  chat_message.json  chat_message.py  test_chat_message.py
ph_agent/ph_agent/doctype/chat_session/: chat_session.js  chat_session.json  chat_session.py  test_chat_session.py
ph_agent/ph_agent/doctype/llm_provider/: llm_provider.js  llm_provider.json  llm_provider.py
ph_agent/ph_agent/doctype/persona/: persona.js  persona.json  persona.py  test_persona.py
ph_agent/ph_agent/doctype/persona_tool_group/: persona_tool_group.json  persona_tool_group.py
ph_agent/ph_agent/doctype/ph_agent_settings/: ph_agent_settings.json  ph_agent_settings.py
ph_agent/ph_agent/doctype/saved_prompt/: saved_prompt.js  saved_prompt.json  saved_prompt.py  test_saved_prompt.py
ph_agent/ph_agent/doctype/skill_registry/: skill_registry.js  skill_registry.json  skill_registry.py  test_skill_registry.py
ph_agent/ph_agent/doctype/skill_resource/: skill_resource.json  skill_resource.py
ph_agent/public/css/: chat.css
ph_agent/utils/: debug_logger.py  file_extractor.py  pdf.py  substitution.py
ph_agent/workspace_sidebar/: ph_agent.json
(+33 files in other folders)
