[project]
name = "ph_agent"
authors = [
    { name = "KAINOTOMO PH LTD", email = "info@kainotomo.com"}
]
description = "A Frappe app that integrates agentic AI chatbots into ERPNext, enabling autonomous, intelligent conversations and task automation within your business workflows."
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=16.0.0" # Installed and managed by bench.
    "agent-framework>=1.2.0",
    "agent-framework-core>=1.2.0",
    "agent-framework-openai>=1.2.0",
    "markitdown[pdf,docx,pptx,xlsx]",
    "yfinance",
    "requests",                        # HTTP client used by 6 tools (sec_edgar, stack_exchange, hacker_news, reddit, exchange_rate, wikipedia)
    "duckduckgo-search>=8.0.0",        # Web search via DDGS (web_search_tool)
    "openai>=1.99.0",                  # Direct usage in framework_agent & llm_memory_provider (also transitive via agent-framework-openai)
    "pydantic>=2.0",                   # Direct usage in all tools & tool_manager (also transitive via agent-framework-core)
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
